2008-10-09  Alper KANAT  <alperkanat@gmail.com>

	* comments/views.py, templates/blog/comments.html: anonymous users can now
	subscribe to the blog posts for notification..
	* comments/templatetags/comment_filters.py: a better comparison..
	* extra/mail.py: only mail if the comment is published..
	* media/js/ff.js: added more reasons.. :)

2008-10-08  Alper KANAT  <alperkanat@gmail.com>

	* comments/admin.py, comments/models.py,
	comments/templatetags/comment_filters.py, comments/views.py: early
	notifications for non-published comments are now prevented. they're only
	mailed if the admins let..
	* templates/blog/comments.html: notification checkbox is deleted from the
	DOM if it's already been checked during comment submission..
	* templates/blog/homepage.html: applied a different class to the link for
	rest of blog posts that underlines it so that it's more visible..

2008-10-04  Alper KANAT  <alperkanat@gmail.com>

	* blog/templatetags/blog_filters.py, templates/blog/sidebar.html,
	templates/blog/twitter.html: fixed a bug that comes up when there's no
	credentials for twitter in settings.py..
	* media/images/twitter_bg.png, media/images/twitter_sidebar.png,
	templates/blog/twitter.html, blog/templatetags/blog_filters.py,
	media/css/style.css, settings-example.py, templates/blog/sidebar.html: added
	twitter support..
	* contrib/, REQUIREMENTS, extra/messages.py, users/views.py: moved all
	external dependencies that comes with raptiye to the contrib folder.. also
	refactored the necessary parts due to that change..

2008-10-03  Alper KANAT  <alperkanat@gmail.com>

	* templates/blog/contact.html: added link for my gpg public key..
	* all templates: extend tag must be the first tag in the template and
	therefore i've switched places with the gpl disclaimer and extend tag..
	* LICENSE and all files: raptiye is now licensed with GPLv3..
	* media/images/ff_horizontal.png, media/js/ff.js, media/css/style.css,